# palazzo

./: Cargo.toml  README.md  opus-resume.sh
docs/: confluence-quickstart-fr.md
src/: main.rs  mcp.rs  qdrant.rs  schema.rs  testmock.rs  util.rs  wal.rs
src/embed/: fastembed_backend.rs  ollama.rs
