[package]
name = "palazzo"
version = "0.11.2"
edition = "2024"
description = "Self-contained Rust MCP memory palace — Qdrant + local fastembed, typed wing/room/hall schema, temporal supersede, token-savings analytics."
repository = "https://github.com/calibrae/palazzo"
license = "MIT"

[features]
default = ["fastembed"]
# Embed locally via fastembed (ONNX nomic-embed-text-v1.5-Q INT8). Self-contained,
# no external services, ~1 GB resident with the Q model loaded, ~110 MB one-time
# model download on first run. This is the production default — every deployed
# palazzo (mista, nxpvm) runs this backend.
fastembed = ["dep:fastembed"]
# Embed via Ollama (HTTP to nomic-embed-text on a remote host). Tiny binary,
# zero native deps, but you need a reachable Ollama server somewhere. Useful
# for dev environments where you'd rather not pay the model download / RSS
# cost for a self-contained build. Mutually exclusive with `fastembed`.
ollama = []

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal", "sync", "net"] }
tokio-util = "0.7"
async-stream = "0.3"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.1"
fastembed = { version = "5", optional = true }
mcp-gain = { git = "https://github.com/calibrae/mcp-gain", tag = "v0.1.0" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[patch.crates-io]
rmcp = { git = "https://github.com/calibrae/rmcp", branch = "feat/auto-accept-sessions" }
